--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,11 @@
 title: GPT-3 Playground (Alpha)
 description: >-
-  Use GPT3 to help analyze your documents, right within DocumentCloud. Note
-  that this Add-On consumes AI credits, which you can get via a Pro or Organization
-  account.
+  An implementation of the example [de-jargonizing GPT-3 application described by Nick Diakopoulos](https://colab.research.google.com/drive/1rr0dxKpwK5zjch1V4eKjwwyVW-AzuDTw#scrollTo=zI4zN4RMg8yq). Use with care as it may introduce factual errors, hallucinations, and other artifacts in summaries.
   
   
   Note that this plugin uses *1 credit per 450 documents analyzed*, rounded up.
   Give this a full prompt that you would pass into GPT-3 and it will run it
-  against your selected documents, one at a time. The plug in only looks at the first page
-  of a document currently. If you define a custom model, [use the naming
-  conventions from this section](https://beta.openai.com/docs/models/gpt-3).
+  against your selected documents, one at a time. The Add-On only looks at the 10,000 characters of a document. 
   The prompt refers to the user input as the "Assignment," the document's text
   as "Document Text", and GPT-3's generated response as the "Answer," which can
   be helpful when defining your prompt.
