--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,6 @@
+# The title is the title of your Add-On
 title: GPT-3 Rewriting Scientific Abstract Example
+# The description will be shown above the form when activating the Add-On
 description: >-
   An implementation of the example [de-jargonizing GPT-3 application described by Nick Diakopoulos](https://colab.research.google.com/drive/1rr0dxKpwK5zjch1V4eKjwwyVW-AzuDTw#scrollTo=zI4zN4RMg8yq). Use with care as it may introduce factual errors, hallucinations, and other artifacts in summaries.
   
@@ -12,9 +14,15 @@ description: >-
   
   
   We'd love your feedback and ideas — drop a note to info at documentcloud dot org or join
-  us in the News Nerdery Slack in the #proj-documentcloud channel.
+  us in the News Nerdery Slack in the #proj-documentcloud channel.# Top level type should always be object
 type: object
+# How does this add-on accept documents
+# If more than one type is specified, the user will be prompted to choose one
 documents:
+  # By the current search query
   - query
+  # By the currently selected documents
   - selected
-
+# Properties are the fields for your form
+properties:
+required:
