--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 # The title is the title of your Add-On
-title: Diakopoulos GPT-3 Example: Summarizing Legislative Bills
+title: "Diakopoulos GPT-3 Example: Summarizing Legislative Bills"
 # The description will be shown above the form when activating the Add-On
 description: >-
   An implementation of the example [using GPT-3 to summarize proposed legislation, described by Nick Diakopoulos](https://colab.research.google.com/drive/1rr0dxKpwK5zjch1V4eKjwwyVW-AzuDTw#scrollTo=zI4zN4RMg8yq). Use with care as it may introduce factual errors, hallucinations, and other artifacts in summaries.
@@ -14,7 +14,8 @@ description: >-
   
   
   We'd love your feedback and ideas — drop a note to info at documentcloud dot org or join
-  us in the News Nerdery Slack in the #proj-documentcloud channel.# Top level type should always be object
+  us in the News Nerdery Slack in the #proj-documentcloud channel.
+# Top level type should always be object
 type: object
 # How does this add-on accept documents
 # If more than one type is specified, the user will be prompted to choose one
